fix: Reverted back to String[] commands; Added waitFor() calls to allow building to complete.